@@ -1,10 +1,15 @@
-*BuiltinVariable	pi	General	0
-*BuiltinVariable	e	General	0
-*Variable	General	%	0.01	0
-*Variable	General	procent	0.01	0
-*Variable	General	promille	0.001	0
+*BuiltinVariable	pi	Constants	Pi
+*BuiltinVariable	e	Constants	Natural Logarithmic Base
+*Variable	General	%	0.01	Procent
+*Variable	General	procent	0.01	Procent
+*Variable	General	promille	0.001	Promille
 *BuiltinVariable	ans	Utility	Answer
 *BuiltinVariable	Ans	Utility	Answer
+*Variable	Constants	archimedes	3.1415926535897932384626433832795028841971693993751	Archimede's Constant
+*Variable	Constants	pythagoras	1.41421356237309504880168872420969807856967187537694	Pythagoras' Constant
+*Variable	Constants	euler	0.57721566490153286060651209008240243104215933593992	Eurler's Constant
+*Variable	Constants	apery	1.20205690315959428539973816151144999076498629234049	Apery's Constant
+*Variable	Constants	golden	1.6180339887498948482045868343656381177203091798057628621	Golden Ratio
 
 *BuiltinFunction	differentiate	Experimental	Differentiate	0	Expression	With respect to
 *BuiltinFunction	gcd	Arithmetics	Greatest Common Divisor	0	1st Number	2nd Number
@@ -122,6 +127,14 @@
 *AliasUnit	Force/Pressure	pascal	pascals	Pa	Pascal	N_p_sqm	1	1
 *CompositeUnit	Energy	N_m	Newton Meter	N	1	1	m	1	1
 *AliasUnit	Energy	joule	joules	J	Joule	N_m	1	1
+*AliasUnit	Energy	calorie	calories	cal	Calorie (international table)	J	4.1868	1
+*AliasUnit	Energy	Calorie	Calories	0	Calorie (capital C)	cal	1000	1
+*AliasUnit	Energy	thermo_calorie	thermo_calories	cal_th	Calorie (thermochemical)	J	4.184	1
+*AliasUnit	Energy	calorie_fifteen	calories_fifteen	0	Calorie (15 degrees Celcius)	J	4.185880	1
+*AliasUnit	Energy	mean_calorie	mean_calories	cal_mean	Calorie (mean)	J	4.19002	1
+*AliasUnit	Energy	Btu	0	0	British Thermal Unit (international table)	J	1055.056	1
+*AliasUnit	Energy	electron_volt	electron_volts	eV	Electron Volt	J	1.602177E-19	1
+*AliasUnit	Energy	erg	ergs	0	Erg	J	1E-7	1
 *CompositeUnit	Energy/Power	J_p_s	Joule per Second	J	1	1	s	-1	1
 *AliasUnit	Energy/Power	watt	watts	W	Watt	J_p_s	1	1
 *CompositeUnit	Electricity/Electric Charge	s_A	Second Ampere	s	1	1	A	1	1
@@ -169,6 +182,8 @@
 *AliasUnit	Area	are	ares	a	Are	m	100	2
 *CompositeUnit	Area	ha	Hectare	a	1	100
 *AliasUnit	Force/Pressure	bar	bars	0	Bar	Pa	100000	1
+*AliasUnit	Force/Pressure	atmosphere	atmospheres	atm	Atmosphere	Pa	101325	1
+*AliasUnit	Force/Pressure	torr	torrs	0	Torr	Pa	1.333224	1
 *AliasUnit	Length	ångström	0	Å	Ångström	m	1E-10	1
 *AliasUnit	Area	barn	barns	b	Barn	m	1E-28	2
 *AliasUnit	Radioactivity	curie	curies	Ci	Curie	Bq	3.7E10	1
